--- a/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
@@ -398,9 +398,9 @@
                              VisualStateNarrowMinWidth="1"
                              BackButtonVisibility="Collapsed">
             <controls:PageHeader.SecondaryCommands>
-                <AppBarButton Name="EditProfile" Label="Редактировать профиль" Foreground="Black" Icon="Setting" Command="{Binding EditProfileCommand}" Visibility="{Binding CommandButtonVisibility, Converter={StaticResource BoolToVisibility}}"/>
-                <AppBarButton Name="PinWindow" Label="Найти пользователя" Icon="OtherUser" Foreground="Black" Command="{Binding SearchUsersCommand}"/>
-                <AppBarButton Name="ExitProfile" Label="Выход" Icon="Remove" Foreground="Black" Command="{Binding ExitProfileCommand}" Visibility="{Binding CommandButtonVisibility, Converter={StaticResource BoolToVisibility}}"/>
+                <AppBarButton Name="EditProfile" Label="Редактировать профиль" Foreground="Black" Icon="Setting" Command="{Binding EditProfileCommand}" Visibility="Collapsed"/>
+                <AppBarButton Name="PinWindow" Label="Найти пользователя" Icon="OtherUser" Foreground="Black" Command="{Binding SearchUsersCommand}" Visibility="Collapsed"/>
+                <AppBarButton Name="ExitProfile" Label="Выход" Icon="Remove" Foreground="Black" Command="{Binding ExitProfileCommand}"/>
             </controls:PageHeader.SecondaryCommands>
         </controls:PageHeader>
         <!--#endregion-->
@@ -454,7 +454,7 @@
                             </Ellipse>
 
                             <TextBlock x:Name="StatusProfileTextBlock" 
-					Text="{Binding Status}" 
+					Text="online" 
 					TextAlignment="Center" 
                     Foreground="{ThemeResource ForegroundCustomBlackBrush}"
 					Margin="0,10,0,0"/>
@@ -471,7 +471,7 @@
                                     <EdgeUIThemeTransition Edge="Left"/>
                                 </TransitionCollection>
                             </Grid.ChildrenTransitions>
-                            <Button Name="SendMessageButton" Height="35" FontSize="16" HorizontalAlignment="Stretch" BorderThickness="0" Command="{Binding ActionWithMessageCommand}" Style="{StaticResource SendMessageButtonStyle}">
+                            <Button Name="SendMessageButton" Height="35" FontSize="16" HorizontalAlignment="Stretch" BorderThickness="0" Command="{Binding ActionWithMessageCommand}" Style="{StaticResource SendMessageButtonStyle}" Visibility="Collapsed">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="&#xE715;" FontFamily="Segoe MDL2 Assets" FontSize="22" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="{ThemeResource ForegroundCustomWhiteBrush}"/>
                                     <TextBlock Name="SendMessageTextBox" Text="{Binding TextButtonMessageContent}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0" FontFamily="Nirmala UI Semilight" Foreground="{ThemeResource ForegroundCustomWhiteBrush}"/>
