--- a/Onliner for windows 10/Onliner for windows 10/Views/Shell.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Shell.xaml
@@ -57,7 +57,7 @@
                 </StackPanel>
             </controls:HamburgerButtonInfo>
 
-           <!-- <controls:HamburgerButtonInfo PageType="local:MainPage">
+            <!-- <controls:HamburgerButtonInfo PageType="local:MainPage">
                 <StackPanel Orientation="Horizontal">
                     <SymbolIcon Width="48" Height="48" Symbol="Shop" />
                     <Grid Margin="12,0,0,0" VerticalAlignment="Center" Width="200">
@@ -87,7 +87,7 @@
                 </StackPanel>
             </controls:HamburgerButtonInfo>
             <!--  Message page  -->
-            <controls:HamburgerButtonInfo PageType="MessagePage:MessagePage">
+            <controls:HamburgerButtonInfo>
                 <controls:HamburgerButtonInfo.Content>
                     <StackPanel Name="MessageStackpanel" Orientation="Horizontal">
                         <SymbolIcon Width="48" Height="48" Symbol="Mail" />
@@ -114,13 +114,13 @@
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="Курсы валют"/>
                         <TextBlock Text="{Binding Current}" Margin="2" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="1">
-             
+
                         </TextBlock>
                     </Grid>
                 </StackPanel>
             </controls:HamburgerButtonInfo>
             <!--  Test page  -->
-           <!-- <controls:HamburgerButtonInfo PageType="local:testpage">
+            <!-- <controls:HamburgerButtonInfo PageType="local:testpage">
                 <StackPanel Orientation="Horizontal">
                     <SymbolIcon Width="48" Height="48" Symbol="Page" />
                     <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="тест" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
