--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -14,6 +14,8 @@
     xmlns:toolkit="using:MyToolkit.Controls"
     xmlns:webviewhelper="using:Onliner.Helpers"
     xmlns:UserControl="using:Onliner_for_windows_10.UserControls"
+    xmlns:pullToRefresh="using:PullToRefresh.UWP"
+    xmlns:viewModel="using:Onliner_for_windows_10.View_Model"
     x:Class="Onliner_for_windows_10.Views.ViewNewsPage"
     mc:Ignorable="d">
 
@@ -49,7 +51,7 @@
                         <TextBlock Text="&#xE19F;" FontSize="14" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Foreground="Gray"/>
                         <TextBlock Text="{Binding LikeCount}" FontSize="14" Margin="2" VerticalAlignment="Center" Foreground="Gray"/>
                     </StackPanel>
-                    <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Right">
+                    <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Right" Visibility="Collapsed">
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                             <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
                             <TextBlock Text="Ответить" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
@@ -165,8 +167,16 @@
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="WebTemlate">
-            <Grid HorizontalAlignment="Stretch">
-                <WebView webviewhelper:WebViewHelper.Html="{Binding Value}" MinWidth="300" Height="250"/>
+            <Grid x:Name="WebGridView" HorizontalAlignment="Stretch">
+                <WebView x:Name="WebViewData" webviewhelper:WebViewHelper.Html="{Binding Value}"
+                         MinWidth="300"
+                         MinHeight="250"
+                         ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                         ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                         HorizontalAlignment="Stretch" 
+                         VerticalAlignment="Stretch" 
+                         Margin="10"
+                         DefaultBackgroundColor="{ThemeResource BackGroundCustomColorBrush}"/>
             </Grid>
         </DataTemplate>
 
@@ -224,8 +234,8 @@
                 <AppBarButton Name="CommentsCoomBarButton" Icon="Comment" Label="Комментарии" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" Command="{Binding ChangeCommetnsGridVisible}"/>
             </controls:PageHeader.PrimaryCommands>
             <controls:PageHeader.SecondaryCommands>
-                <AppBarButton Icon="Save" Label="Сохранить" Foreground="Black" Command="{Binding SaveNewsInDB}"/>
-                <AppBarButton Icon="Link" Label="Открыть в бр" Foreground="Black" Command="{Binding OpenNewsInBrowser}"/>
+                <AppBarButton Icon="Save" Label="Сохранить" Foreground="Black" Command="{Binding SaveNewsInDB}" Visibility="Collapsed"/>
+                <AppBarButton Icon="Link" Label="Перейти на сайт" Foreground="Black" Command="{Binding OpenNewsInBrowser}"/>
             </controls:PageHeader.SecondaryCommands>
         </controls:PageHeader>
         <!--#endregion-->
@@ -259,9 +269,7 @@
                         <ListView Name="NewsListInfo"
                               ItemTemplateSelector="{StaticResource ListViewItemSelector}"
                               ItemsSource="{Binding NewsItemContent}"
-                              ItemContainerStyle="{StaticResource ListViewItemDisableTilt}"
-                              SelectionChanged="NewsListInfo_SelectionChanged">
-                        </ListView>
+                              ItemContainerStyle="{StaticResource ListViewItemDisableTilt}"/>
                     </Grid>
                     <!--#endregion-->
 
@@ -271,21 +279,38 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-                        <ListView x:Name="CommentsListView" Grid.Row="0" 
+                        <Grid>
+                            <pullToRefresh:PullToRefreshBox >
+                                <pullToRefresh:PullToRefreshBox.TopIndicatorTemplate>
+                                    <DataTemplate>
+                                        <pullToRefresh:PullRefreshProgressControl Progress="{Binding}"
+                                            PullToRefreshText="Потяните, чтобы обновить..."
+                                                                         ReleaseToRefreshText="Отпустите"/>
+                                    </DataTemplate>
+                                </pullToRefresh:PullToRefreshBox.TopIndicatorTemplate>
+                                <Interactivity:Interaction.Behaviors>
+                                    <Core:EventTriggerBehavior EventName="RefreshInvoked">
+                                        <Core:InvokeCommandAction Command="{Binding UpdateCommentsList}"/>
+                                    </Core:EventTriggerBehavior>
+                                </Interactivity:Interaction.Behaviors>
+                                <ListView x:Name="CommentsListView" 
                               ItemsSource="{Binding CommentsItem}" 
                               ItemTemplate="{StaticResource CommentsList}" 
                               HorizontalAlignment="Stretch" 
                               Style="{StaticResource CommentsListViewStyle}"
                               ItemContainerStyle="{StaticResource ListViewItemDisableTilt}">
-                            <ListView.ItemContainerTransitions>
-                                <TransitionCollection>
-                                    <EntranceThemeTransition IsStaggeringEnabled="True" 
+                                <ListView.ItemContainerTransitions>
+                                    <TransitionCollection>
+                                        <EntranceThemeTransition IsStaggeringEnabled="True" 
 								FromVerticalOffset="0" 
 								FromHorizontalOffset="100"/>
-                                </TransitionCollection>
-                            </ListView.ItemContainerTransitions>
+                                    </TransitionCollection>
+                                </ListView.ItemContainerTransitions>
 
-                        </ListView>
+                            </ListView>
+                            </pullToRefresh:PullToRefreshBox>
+                        </Grid>
+                        <ProgressBar Foreground="Blue" Background="Transparent" IsIndeterminate="{Binding CommentsProgressRing}" VerticalAlignment="Top"/>
                         <Button x:Name="DownListButton" Width="32" Height="32" Grid.Row="0" 
                                 VerticalAlignment="Top"
                                 HorizontalAlignment="Right" Foreground="Gray"
@@ -330,6 +355,7 @@
                             <TextBox Name="ContentCommentTextBox" 
                                  VerticalAlignment="Center"
                                  Margin="5"
+                                 Text="{Binding Message, Mode=TwoWay}"
                                  HorizontalAlignment="Stretch"
                                  AcceptsReturn="True"
                                  Grid.Column="0"
